website/css/style.css
html {
    color: #5c503b;
    background-color: #93c997
}

*, *::before, *::after {
    box-sizing: border-box;
}

body {
    margin: 0;
    padding: 10px;
    font-family: sans-serif;
}

nav {
    display: flex;
    flex-direction: column;
    gap: 10px;
    align-items: flex-start;
}

nav span {
    display: block;
    text-align: left;
}

.gallery-container {
    display: flex;
    flex-direction: column;
    gap: 30px;
    align-items: center;
    padding: 40px 0px;
    min-width: fit-content;
}

.photo-block {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 10px;
}

.photo-block img {
    height: 50vh;
    width: auto;
    max-width: 100%;
    object-fit: contain;
    display: block;
}

.front-page-art {
    height: auto;
    width: 100%;
    max-width: 100%;
    display: block;
}

.caption {
    text-align: center;
    font-size: 1rem;
    min-height: 1.5em;
}

